fix findFacility padding spacing on tables

--- a/Spotr/src/main/webapp/css/template.css
+++ b/Spotr/src/main/webapp/css/template.css
@@ -108,6 +108,16 @@ form {
 	overflow: auto;
 }
 
+td {
+	padding-left: 4px;
+	padding-right: 4px;
+}
+
+th {
+	padding-left: 4px;
+	padding-right: 4px;
+}
+
 
 .formLabels {
 	text-align: center;
